fixed cartText alignment and searchbar size

--- a/frontend/src/components/navigation/Navigation.css
+++ b/frontend/src/components/navigation/Navigation.css
@@ -53,7 +53,11 @@
 .cartContainer {
   position: relative;
   padding: 8px;
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
 }
+
 
 .cartContainer:hover::after {
   content: '';
@@ -66,19 +70,23 @@
   pointer-events: none;
 }
 
+
 .cartNum {
   position: absolute;
-  top: 7px;
-  right: 52px;
+  top: 35%;
+  right: 65%;
+  transform: translate(50%, -50%);
   color: #EE8704;
   font-size: 17px;
   border-radius: 50%;
 }
 
+
 .cartPng {
   width: 35px;
   height: 35px;
 }
+
 
 .cartText {
   margin-left: 5px;
@@ -105,6 +113,7 @@
   position: relative;
 }
 
+
 .dropdownBorderDiv:hover::after {
   content: '';
   position: absolute;
@@ -116,10 +125,12 @@
   pointer-events: none;
 }
 
+
 .dropdown {
   position: relative;
   display: inline-block;
 }
+
 
 .dropdown-content {
   display: none;
@@ -130,7 +141,6 @@
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 100;
 }
-
 
 
 .dropdown:hover .dropdown-content {
@@ -149,6 +159,7 @@
   margin-bottom: 0;
 }
 
+
 #sessionLinkBtn {
   padding: 12px;
   padding-top: 24px;
@@ -164,6 +175,7 @@
   font-size: 14px;
   font-weight: 700;
 }
+
 
 #sessionLinks:hover, #sessionLinkBtn:hover {
   color: #856200;
